Finalização do html do Slide

--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,3 +1,11 @@
 page-intro {
 
+    .slide_image img {
+        width: 250px;
+    }
+
+    .slide_texto strong{
+        color: indigo;
+        
+    }
 }
